# oauth2.python.flask

./: COPILOT.md  README.md  pyproject.toml  requirements.txt  setup_git_sync.ps1
.github/: .copilot-commit-message-instructions.md  .copilot-instructions.md  .copilot-test-instructions.md
src/: app.py  config.py  models.py  oauth2.py  route.py
src/templates/: add_client.html  authorize.html  base.html  client_list.html  home.html  login.html  register.html  user.html
